--- a/PatternRecognition.ipynb
+++ b/PatternRecognition.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import random"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -11,18 +21,43 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# --- Dataset ---\n",
+    "# \n",
+    "\n",
+    "# \"1\" patterns\n",
+    "patterns_1 = np.array([\n",
+    "    [0,0,1,0,0, 0,0,1,0,0, 0,0,1,0,0, 0,0,1,0,0, 0,0,1,0,0],\n",
+    "    [0,1,1,0,0, 0,0,1,0,0, 0,0,1,0,0, 0,0,1,0,0, 0,1,1,1,0],\n",
+    "    [0,0,1,0,0, 0,1,1,0,0, 0,0,1,0,0, 0,0,1,0,0, 0,0,1,0,0],\n",
+    "    [0,0,0,1,0, 0,0,1,1,0, 0,0,1,0,0, 0,1,1,0,0, 0,1,0,0,0],\n",
+    "    [0,0,0,0,1, 0,0,0,1,0, 0,0,1,0,0, 0,1,0,0,0, 1,0,0,0,0],\n",
+    "    [0,0,0,0,1, 0,0,1,0,0, 0,0,1,0,0, 0,0,1,0,0, 0,0,1,0,0]\n",
+    "])\n",
+    "\n",
+    "# \"0\" patterns\n",
+    "patterns_0 = np.array([\n",
+    "    [0,1,1,1,0, 0,1,0,1,0, 0,1,0,1,0, 0,1,0,1,0, 0,1,1,1,0],\n",
+    "    [0,0,1,0,0, 0,1,0,1,0, 0,1,0,1,0, 0,1,0,1,0, 0,0,1,0,0],\n",
+    "    [0,0,1,0,0, 0,1,0,1,0, 0,1,0,1,0, 0,1,0,1,0, 0,1,1,1,0],\n",
+    "    [0,0,1,1,0, 0,1,0,0,1, 0,1,0,0,1, 0,1,0,1,0, 0,1,1,0,0],\n",
+    "    [1,1,1,1,1, 1,0,0,0,1, 1,0,1,0,1, 1,0,0,0,1, 1,1,1,1,1],\n",
+    "    [0,1,1,1,0, 1,0,0,0,1, 1,0,0,0,1, 1,0,0,0,1, 0,1,1,1,0]\n",
+    "])"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "pattern_recognition_venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
