Implemented single perceptron, achieved 87.5% average accuracy over 10 experiments.

--- a/PatternRecognition.ipynb
+++ b/PatternRecognition.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,12 +20,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# --- Dataset ---\n",
-    "# \n",
     "\n",
     "# \"1\" patterns\n",
     "patterns_1 = np.array([\n",
@@ -47,6 +46,348 @@
     "    [0,1,1,1,0, 1,0,0,0,1, 1,0,0,0,1, 1,0,0,0,1, 0,1,1,1,0]\n",
     "])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total training patterns: 8\n",
+      "Total test patterns: 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "# --- Prepare Training and Test Sets ---\n",
+    "\n",
+    "# Create a list of indices [0, 1, 2, 3, 4, 5]\n",
+    "indices = list(range(6))\n",
+    "random.shuffle(indices)\n",
+    "\n",
+    "# Choose 4 for training, 2 for testing\n",
+    "train_indices = indices[:4]\n",
+    "test_indices = indices[4:]\n",
+    "\n",
+    "# Create the training set\n",
+    "train_1 = patterns_1[train_indices]\n",
+    "train_0 = patterns_0[train_indices]\n",
+    "\n",
+    "# Create the test set\n",
+    "test_1 = patterns_1[test_indices]\n",
+    "test_0 = patterns_0[test_indices]\n",
+    "\n",
+    "# Combine patterns and create labels\n",
+    "# Training data with labels (+1 for \"1\", -1 for \"0\")\n",
+    "training_data = list(zip(np.concatenate((train_1, train_0)), np.array([1]*4 + [-1]*4)))\n",
+    "\n",
+    "# Test data with labels\n",
+    "test_data = list(zip(np.concatenate((test_1, test_0)), np.array([1]*2 + [-1]*2)))\n",
+    "\n",
+    "# Shuffle the training data for random presentation order \n",
+    "random.shuffle(training_data)\n",
+    "\n",
+    "print(f\"Total training patterns: {len(training_data)}\")\n",
+    "print(f\"Total test patterns: {len(test_data)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# --- Perceptron Training ---\n",
+    "\n",
+    "# Step 1: Initialize parameters\n",
+    "learning_rate = 0.1\n",
+    "# Weights: 25 small random numbers\n",
+    "weights = np.random.rand(25) * 0.1 \n",
+    "# Bias: one small random number\n",
+    "bias = np.random.rand(1) * 0.1\n",
+    "\n",
+    "# Epoch tracking\n",
+    "epochs = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1, Total Errors: 2\n",
+      "Epoch 2, Total Errors: 2\n",
+      "Training complete after 3 epochs.\n",
+      "\n",
+      "Final Learned Weights:\n",
+      "[-0.19514708 -0.14023342 -0.15751726 -0.18349817  0.03378337 -0.12237197\n",
+      " -0.14367376  0.21721796  0.08027355 -0.12371434 -0.10231235 -0.15847014\n",
+      "  0.21080518 -0.18937152 -0.17646172 -0.19789657  0.09088766  0.26243505\n",
+      " -0.10271157 -0.17928206  0.06531002 -0.38947393 -0.15415724 -0.36419489\n",
+      " -0.15171093]\n",
+      "\n",
+      "Final Learned Bias:\n",
+      "[0.02215597]\n"
+     ]
+    }
+   ],
+   "source": [
+    "while True:\n",
+    "    epochs += 1\n",
+    "    total_error = 0\n",
+    "    \n",
+    "    # Step 2: Shuffle the training data for each epoch\n",
+    "    random.shuffle(training_data)\n",
+    "    \n",
+    "    # Loop through each training pattern and its label\n",
+    "    for x, d in training_data:\n",
+    "        # Step 3: Calculate the network output for this input 'x'\n",
+    "        \n",
+    "        # 1. Calculate the raw output (dot product of x and weights, plus bias)\n",
+    "        raw_output = np.dot(x, weights) + bias\n",
+    "\n",
+    "        # 2. Apply the sign activation function. If the result is >= 0, output is 1, else -1.\n",
+    "        if raw_output >= 0:\n",
+    "            y = 1\n",
+    "        else:\n",
+    "            y = -1\n",
+    "\n",
+    "        # Step 4: Update the weights and bias if there's an error\n",
+    "        if y != d:\n",
+    "            total_error += 1\n",
+    "\n",
+    "            # 3. Calculate the error term: (d - y)\n",
+    "            error = d - y\n",
+    "            # 4. Update the weights vector using the formula\n",
+    "            weights += learning_rate * error * x\n",
+    "            # 5. Update the bias using the formula\n",
+    "            bias += learning_rate * error\n",
+    "\n",
+    "    # Step 5: Check the stopping condition\n",
+    "    # If total_error is 0 after a full epoch, the training is complete.\n",
+    "    if total_error == 0:\n",
+    "        print(f\"Training complete after {epochs} epochs.\")\n",
+    "        break\n",
+    "        \n",
+    "    # Optional: Print progress\n",
+    "    print(f\"Epoch {epochs}, Total Errors: {total_error}\")\n",
+    "\n",
+    "# After the loop, print the final learned parameters\n",
+    "print(\"\\nFinal Learned Weights:\")\n",
+    "print(weights)\n",
+    "print(\"\\nFinal Learned Bias:\")\n",
+    "print(bias)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Results from running the perceptron once:\n",
+    "\n",
+    "Epoch 1, Total Errors: 2  \n",
+    "Epoch 2, Total Errors: 2  \n",
+    "Training complete after 3 epochs.\n",
+    "\n",
+    "**Final Learned Weights:**\n",
+    "```python\n",
+    "[-0.19514708, -0.14023342, -0.15751726, -0.18349817,  0.03378337, -0.12237197,\n",
+    " -0.14367376,  0.21721796,  0.08027355, -0.12371434, -0.10231235, -0.15847014,\n",
+    "  0.21080518, -0.18937152, -0.17646172, -0.19789657,  0.09088766,  0.26243505,\n",
+    " -0.10271157, -0.17928206,  0.06531002, -0.38947393, -0.15415724, -0.36419489,\n",
+    " -0.15171093]\n",
+    "\n",
+    "Final Learned Bias:\n",
+    "[0.02215597]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Results:\n",
+      "Correct classifications: 3 / 4\n",
+      "Accuracy: 75.00%\n",
+      "Error Rate: 25.00%\n"
+     ]
+    }
+   ],
+   "source": [
+    "# --- Evaluate the Perceptron on the Test Set ---\n",
+    "\n",
+    "test_errors = 0\n",
+    "total_test_patterns = len(test_data)\n",
+    "\n",
+    "# Loop through each test pattern and its true label\n",
+    "for x, d in test_data:\n",
+    "    # Use the FINAL trained weights and bias to make a prediction\n",
+    "    \n",
+    "    # 1. Calculate the raw output\n",
+    "    raw_output = np.dot(x, weights) + bias\n",
+    "    \n",
+    "    # 2. Apply the sign activation function\n",
+    "    if raw_output >= 0:\n",
+    "        y = 1\n",
+    "    else:\n",
+    "        y = -1\n",
+    "    \n",
+    "    # 3. Check if the prediction is incorrect\n",
+    "    if y != d:\n",
+    "        test_errors += 1\n",
+    "\n",
+    "# Calculate and print the performance\n",
+    "accuracy = (total_test_patterns - test_errors) / total_test_patterns\n",
+    "error_rate = test_errors / total_test_patterns\n",
+    "\n",
+    "print(f\"Test Results:\")\n",
+    "print(f\"Correct classifications: {total_test_patterns - test_errors} / {total_test_patterns}\")\n",
+    "print(f\"Accuracy: {accuracy * 100:.2f}%\")\n",
+    "print(f\"Error Rate: {error_rate * 100:.2f}%\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Results from running the perceptron once:**\n",
+    "\n",
+    "**Test Results:**\n",
+    "- Correct classifications: `3 / 4`\n",
+    "- Accuracy: `75.00%`\n",
+    "- Error Rate: `25.00%`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- Running Experiment 1/10 ---\n",
+      "Experiment 1 Accuracy: 100.00%\n",
+      "--- Running Experiment 2/10 ---\n",
+      "Experiment 2 Accuracy: 100.00%\n",
+      "--- Running Experiment 3/10 ---\n",
+      "Experiment 3 Accuracy: 100.00%\n",
+      "--- Running Experiment 4/10 ---\n",
+      "Experiment 4 Accuracy: 75.00%\n",
+      "--- Running Experiment 5/10 ---\n",
+      "Experiment 5 Accuracy: 75.00%\n",
+      "--- Running Experiment 6/10 ---\n",
+      "Experiment 6 Accuracy: 75.00%\n",
+      "--- Running Experiment 7/10 ---\n",
+      "Experiment 7 Accuracy: 100.00%\n",
+      "--- Running Experiment 8/10 ---\n",
+      "Experiment 8 Accuracy: 75.00%\n",
+      "--- Running Experiment 9/10 ---\n",
+      "Experiment 9 Accuracy: 100.00%\n",
+      "--- Running Experiment 10/10 ---\n",
+      "Experiment 10 Accuracy: 75.00%\n",
+      "\n",
+      "--- Final Results ---\n",
+      "Average accuracy over 10 experiments: 87.50%\n"
+     ]
+    }
+   ],
+   "source": [
+    "# --- Run Multiple Experiments for Average Performance ---\n",
+    "\n",
+    "num_experiments = 10\n",
+    "accuracies = []\n",
+    "\n",
+    "for i in range(num_experiments):\n",
+    "    print(f\"--- Running Experiment {i+1}/{num_experiments} ---\")\n",
+    "    \n",
+    "    # 1. Split the data randomly\n",
+    "    indices = list(range(6))\n",
+    "    random.shuffle(indices)\n",
+    "    train_indices = indices[:4]\n",
+    "    test_indices = indices[4:]\n",
+    "\n",
+    "    training_data = list(zip(np.concatenate((patterns_1[train_indices], patterns_0[train_indices])), np.array([1]*4 + [-1]*4)))\n",
+    "    test_data = list(zip(np.concatenate((patterns_1[test_indices], patterns_0[test_indices])), np.array([1]*2 + [-1]*2)))\n",
+    "\n",
+    "    \n",
+    "    # 2. Initialize parameters\n",
+    "    weights = np.random.rand(25) * 0.1\n",
+    "    bias = np.random.rand(1) * 0.1\n",
+    "    epochs = 0\n",
+    "\n",
+    "    # 3. Train the model\n",
+    "    while True:\n",
+    "\n",
+    "        total_error = 0\n",
+    "        for x, d in training_data:\n",
+    "            # ...\n",
+    "            if (np.dot(x, weights) + bias) >= 0: y=1\n",
+    "            else: y=-1\n",
+    "            \n",
+    "            if y != d:\n",
+    "                total_error += 1\n",
+    "                error = d - y\n",
+    "                weights += learning_rate * error * x\n",
+    "                bias += learning_rate * error\n",
+    "        \n",
+    "        if total_error == 0:\n",
+    "            break\n",
+    "            \n",
+    "    # 4. Evaluate on the test set\n",
+    "    test_errors = 0\n",
+    "\n",
+    "    for x, d in test_data:\n",
+    "        if (np.dot(x, weights) + bias) >= 0: y=1\n",
+    "        else: y=-1\n",
+    "        if y != d: test_errors += 1\n",
+    "\n",
+    "    accuracy = (len(test_data) - test_errors) / len(test_data)\n",
+    "    accuracies.append(accuracy)\n",
+    "    print(f\"Experiment {i+1} Accuracy: {accuracy*100:.2f}%\")\n",
+    "\n",
+    "# 5. Calculate average performance\n",
+    "average_accuracy = np.mean(accuracies)\n",
+    "print(f\"\\n--- Final Results ---\")\n",
+    "print(f\"Average accuracy over {num_experiments} experiments: {average_accuracy * 100:.2f}%\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "## Experiment: Run perceptron 10 times, each with a different random shuffle of training and test data, and random initial weight and bias \n",
+    "\n",
+    "### Running Experiments\n",
+    "- **Experiment 1**: Accuracy: **100.00%**\n",
+    "- **Experiment 2**: Accuracy: **100.00%**\n",
+    "- **Experiment 3**: Accuracy: **100.00%**\n",
+    "- **Experiment 4**: Accuracy: **75.00%**\n",
+    "- **Experiment 5**: Accuracy: **75.00%**\n",
+    "- **Experiment 6**: Accuracy: **75.00%**\n",
+    "- **Experiment 7**: Accuracy: **100.00%**\n",
+    "- **Experiment 8**: Accuracy: **75.00%**\n",
+    "- **Experiment 9**: Accuracy: **100.00%**\n",
+    "- **Experiment 10**: Accuracy: **75.00%**\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Final Results\n",
+    "**Average accuracy over 10 experiments**: **87.50%**\n"
+   ]
   }
  ],
  "metadata": {
@@ -56,7 +397,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.6"
   }
  },
