Achieved final test accuracy of 89.97% from training on small subset

--- a/Task2SLP.ipynb
+++ b/Task2SLP.ipynb
@@ -252,6 +252,37 @@
     "    accuracy = np.mean(predicted_classes == true_classes)\n",
     "    print(f\"Training Accuracy: {accuracy * 100:.2f}%\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Final Test Accuracy: 89.97%\n"
+     ]
+    }
+   ],
+   "source": [
+    "# --- Evaluate the SLP on the Test Set ---\n",
+    "\n",
+    "# Perform a forward pass on the full test data using the final trained weights and biases\n",
+    "test_predictions = sigmoid(np.dot(test_images_flat, weights) + biases)\n",
+    "\n",
+    "# Get the predicted class for each test image by finding the index of the max output value\n",
+    "test_predicted_classes = np.argmax(test_predictions, axis=1)\n",
+    "\n",
+    "# Get the true class for each test image from the one-hot encoded labels\n",
+    "test_true_classes = np.argmax(test_labels_one_hot, axis=1)\n",
+    "\n",
+    "# Calculate the accuracy by comparing the predicted classes to the true classes\n",
+    "test_accuracy = np.mean(test_predicted_classes == test_true_classes)\n",
+    "\n",
+    "print(f\"Final Test Accuracy: {test_accuracy * 100:.2f}%\")"
+   ]
   }
  ],
  "metadata": {
