Completed training and testing on the full 60000 sample size. Achieved 91.45% test accuracy.

--- a/Task2SLP.ipynb
+++ b/Task2SLP.ipynb
@@ -142,6 +142,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Training on small subset (6000 samples)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -282,6 +289,93 @@
     "test_accuracy = np.mean(test_predicted_classes == test_true_classes)\n",
     "\n",
     "print(f\"Final Test Accuracy: {test_accuracy * 100:.2f}%\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Training on full subset (60000 samples)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- Epoch 1/10 ---\n",
+      "Training Accuracy: 90.13%\n",
+      "--- Epoch 2/10 ---\n",
+      "Training Accuracy: 90.55%\n",
+      "--- Epoch 3/10 ---\n",
+      "Training Accuracy: 90.87%\n",
+      "--- Epoch 4/10 ---\n",
+      "Training Accuracy: 91.09%\n",
+      "--- Epoch 5/10 ---\n",
+      "Training Accuracy: 91.24%\n",
+      "--- Epoch 6/10 ---\n",
+      "Training Accuracy: 91.32%\n",
+      "--- Epoch 7/10 ---\n",
+      "Training Accuracy: 91.42%\n",
+      "--- Epoch 8/10 ---\n",
+      "Training Accuracy: 91.49%\n",
+      "--- Epoch 9/10 ---\n",
+      "Training Accuracy: 91.53%\n",
+      "--- Epoch 10/10 ---\n",
+      "Training Accuracy: 91.57%\n"
+     ]
+    }
+   ],
+   "source": [
+    "# --- SLP Training Loop ---\n",
+    "\n",
+    "# Set the number of epochs\n",
+    "epochs = 10\n",
+    "\n",
+    "for epoch in range(epochs):\n",
+    "    print(f\"--- Epoch {epoch + 1}/{epochs} ---\")\n",
+    "    \n",
+    "    # Loop through each image (x) and its one-hot label (d) in small training set\n",
+    "    for x, d in zip(train_images_flat, train_labels_one_hot):\n",
+    "        \n",
+    "        # 1. FORWARD PASS\n",
+    "        # Calculate the output 'y' for all 10 neurons\n",
+    "        \n",
+    "         # Calculate the raw output v \n",
+    "        raw_output_v = np.dot(x, weights) + biases\n",
+    "         # Apply the sigmoid activation function to get the final output y\n",
+    "        final_output_y = sigmoid(raw_output_v)\n",
+    "\n",
+    "        # 2. BACKWARD PASS (Weight and Bias Update)\n",
+    "        # Using the Delta Rule:\n",
+    "        # w(t+1) = w(t) + α[d(t)-y(t)]y(t)[1-y(t)]x(t)\n",
+    "        # b(t+1) = b(t) + α[d(t)-y(t)]y(t)[1-y(t)]\n",
+    "\n",
+    "        # Calculate the delta term\n",
+    "        delta = (d - final_output_y) * final_output_y * (1 - final_output_y)\n",
+    "\n",
+    "        # Update weights matrix\n",
+    "        weights += learning_rate * np.outer(x, delta)\n",
+    "        # Update biases vector\n",
+    "        biases += learning_rate * delta\n",
+    "\n",
+    "    # 3. TRACK PERFORMANCE (at the end of each epoch)\n",
+    "\n",
+    "    # Calculate predictions on the small training set\n",
+    "    predictions = sigmoid(np.dot(train_images_flat, weights) + biases)\n",
+    "\n",
+    "    # Get the class with the highest output value for each image\n",
+    "    predicted_classes = np.argmax(predictions, axis=1)\n",
+    "\n",
+    "    # Get the true classes (non-one-hot)\n",
+    "    true_classes = np.argmax(train_labels_one_hot, axis=1)\n",
+    "    \n",
+    "    accuracy = np.mean(predicted_classes == true_classes)\n",
+    "    print(f\"Training Accuracy: {accuracy * 100:.2f}%\")"
    ]
   }
  ],
