--- a/Task3MLP.ipynb
+++ b/Task3MLP.ipynb
@@ -14,7 +14,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Question 2: Single Layer Perceptron\n",
+    "# Question 3: Multi Layer Perceptron\n",
     "\n"
    ]
   },
